<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/imageView_product_image"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_width="80dp"
        android:layout_height="80dp"/>

    <TextView
        android:id="@+id/textView_product_title"
        android:layout_toRightOf="@+id/imageView_product_image"
        android:layout_centerVertical="true"
        android:singleLine="true"
    android:ellipsize="marquee"
        android:textSize="20sp"
        android:text="title"
        android:layout_width="265dp"
        android:layout_height="wrap_content"/>

</RelativeLayout>